// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`museumMapObjects resolver returns a MuseumMapObjectsConnection when a query string and bounding box are provided: Buckets search with query string and bounding box args. 1`] = `
Array [
  Object {
    "body": Object {
      "aggregations": Object {
        "museumsGrid": Object {
          "aggregations": Object {
            "avgLatitude": Object {
              "avg": Object {
                "field": "latitude",
              },
            },
            "avgLongitude": Object {
              "avg": Object {
                "field": "longitude",
              },
            },
          },
          "geohash_grid": Object {
            "field": "location",
            "precision": 3,
          },
        },
      },
      "query": Object {
        "bool": Object {
          "filter": Object {
            "geo_bounding_box": Object {
              "location": Object {
                "bottom": -0.7031073524364783,
                "left": -150.20489340321566,
                "right": -45.61504965321564,
                "top": 65.14611484756375,
              },
            },
          },
          "must": Object {
            "multi_match": Object {
              "query": "museum",
            },
          },
        },
      },
    },
    "index": "museums",
    "size": 0,
  },
]
`;

exports[`museumMapObjects resolver returns a MuseumMapObjectsConnection when a query string and bounding box are provided: Museums search with query string and bounding box args. 1`] = `
Array [
  Object {
    "body": Object {
      "query": Object {
        "bool": Object {
          "minimum_should_match": 1,
          "must": Object {
            "multi_match": Object {
              "query": "museum",
            },
          },
          "should": Array [
            Object {
              "bool": Object {
                "filter": Object {
                  "geo_bounding_box": Object {
                    "location": Object {
                      "bottom": 39.375,
                      "left": -74.53125,
                      "right": -73.125,
                      "top": 40.78125,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
    "index": "museums",
    "size": 5000,
  },
]
`;

exports[`museumMapObjects resolver returns a MuseumMapObjectsConnection when a query string and bounding box are provided: museumMapObjects with query string and bounding box args response. 1`] = `
Object {
  "data": Object {
    "museumMapObjects": Object {
      "edges": Array [
        Object {
          "node": Object {
            "__typename": "GeoPointBucket",
            "count": 931,
            "geoHashKey": "dr4",
            "latitude": 40.11064952682348,
            "longitude": -75.22248325696181,
          },
        },
        Object {
          "node": Object {
            "__typename": "GeoPointBucket",
            "count": 788,
            "geoHashKey": "dr7",
            "latitude": 41.196299010727,
            "longitude": -73.81607840872053,
          },
        },
        Object {
          "node": Object {
            "__typename": "Museum",
            "id": 5104,
            "latitude": 40.70317,
            "longitude": -74.00916,
            "name": "OPERATION SAIL",
          },
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`museumMapObjects resolver returns a MuseumMapObjectsConnection when no query string or bounding box is provided: Buckets search with no arguments. 1`] = `
Array [
  Object {
    "body": Object {
      "aggregations": Object {
        "museumsGrid": Object {
          "aggregations": Object {
            "avgLatitude": Object {
              "avg": Object {
                "field": "latitude",
              },
            },
            "avgLongitude": Object {
              "avg": Object {
                "field": "longitude",
              },
            },
          },
          "geohash_grid": Object {
            "field": "location",
            "precision": 2,
          },
        },
      },
      "query": Object {
        "bool": Object {
          "filter": undefined,
          "must": undefined,
        },
      },
    },
    "index": "museums",
    "size": 0,
  },
]
`;

exports[`museumMapObjects resolver returns a MuseumMapObjectsConnection when no query string or bounding box is provided: Museums search with no arguments. 1`] = `
Array [
  Object {
    "body": Object {
      "query": Object {
        "bool": Object {
          "minimum_should_match": 1,
          "must": undefined,
          "should": Array [
            Object {
              "bool": Object {
                "filter": Object {
                  "geo_bounding_box": Object {
                    "location": Object {
                      "bottom": 39.375,
                      "left": -74.53125,
                      "right": -73.125,
                      "top": 40.78125,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
    "index": "museums",
    "size": 5000,
  },
]
`;

exports[`museumMapObjects resolver returns a MuseumMapObjectsConnection when no query string or bounding box is provided: museumMapObjects with no args response. 1`] = `
Object {
  "data": Object {
    "museumMapObjects": Object {
      "edges": Array [
        Object {
          "node": Object {
            "__typename": "GeoPointBucket",
            "count": 931,
            "geoHashKey": "dr4",
            "latitude": 40.11064952682348,
            "longitude": -75.22248325696181,
          },
        },
        Object {
          "node": Object {
            "__typename": "GeoPointBucket",
            "count": 788,
            "geoHashKey": "dr7",
            "latitude": 41.196299010727,
            "longitude": -73.81607840872053,
          },
        },
        Object {
          "node": Object {
            "__typename": "Museum",
            "id": 5104,
            "latitude": 40.70317,
            "longitude": -74.00916,
            "name": "OPERATION SAIL",
          },
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`museumMapObjects resolver returns a MuseumMapObjectsConnection with no edges when an empty bounding box is provided: Buckets search with empty bounding box. 1`] = `
Array [
  Object {
    "body": Object {
      "aggregations": Object {
        "museumsGrid": Object {
          "aggregations": Object {
            "avgLatitude": Object {
              "avg": Object {
                "field": "latitude",
              },
            },
            "avgLongitude": Object {
              "avg": Object {
                "field": "longitude",
              },
            },
          },
          "geohash_grid": Object {
            "field": "location",
            "precision": 12,
          },
        },
      },
      "query": Object {
        "bool": Object {
          "filter": Object {
            "geo_bounding_box": Object {
              "location": Object {
                "bottom": 38.907974370742046,
                "left": -94.47119146585467,
                "right": -94.46789234876636,
                "top": 38.909752622714755,
              },
            },
          },
          "must": undefined,
        },
      },
    },
    "index": "museums",
    "size": 0,
  },
]
`;

exports[`museumMapObjects resolver returns a MuseumMapObjectsConnection with no edges when an empty bounding box is provided: museumMapObjects with query string and bounding box args response. 1`] = `
Object {
  "data": Object {
    "museumMapObjects": Object {
      "edges": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
